Avoid syntactic ambiguity

BUG: 361473